syntax = "proto3";

package maximum.industries;

enum Player {
    WHITE = 0;
    BLACK = 1;
}

enum TsrType {
    MOVE_PROB = 0;
    OUTCOME_PROB = 1;
}

message WinLoseDraw {
    float win = 1;
    float lose = 2;
    float draw = 3;
}

message TreeSearchResult {
    uint32 index = 1;
    TsrType type = 2;
    float prob = 3;
    WinLoseDraw wld = 4;
}

message TrainingInstance {
    bytes board_state = 1;
    Player player = 2;
    int32 outcome = 3;
    uint32 game_length = 4;
    repeated TreeSearchResult tree_search_result = 5;
}

